refacto and tests
