# internal/models/responses.go
@@ -5,7 +5,7 @@ type CreateWalletResponse struct {
 	Message string `json:"message"`
 }
 
-type WalletFundsResponse struct {
+type TransactionResponse struct {
 	UserID  string `json:"userID"`
 	Message string `json:"message"`
 }
